Evaluate find text length when deciding if we should enable findbar buttons

Fix regression on Mac related to find bar button enablement.

Bug: 758491
Change-Id: Ic87e20be062cbd6f3ef48b926161a576b5064a11
Reviewed-on: https://chromium-review.googlesource.com/646066
Reviewed-by: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Commit-Queue: Rohit Rao (ping after 24h) <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499063}
Former-commit-id: f9bc1fcaf5411f7060c1ad9724131a7a2601e8ec